height bug on mobile front page fix
grid-container height and featured box height fixed 100% height instead of fixed vh height, container right middle changed from grid row 5 to 4.

--- a/css/media.css
+++ b/css/media.css
@@ -218,10 +218,18 @@
     background: url(../images/mountain_pattern.png) no-repeat bottom, white;
   }
 
-  .grid-container {
+  /*.grid-container {
     grid-template-columns: 1fr;
     grid-template-rows: 15%;
     height: 90vh;
+  }*/
+
+  .grid-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 20% 25% 25%;
+    height: 100%;
+    padding-bottom:70px;
+    gap: 20px;
   }
 
   .container-left-top,
@@ -231,13 +239,21 @@
     margin: 0 auto;
   }
 
+  .container-right-top {
+    display: none;
+  }
+
   .container-right-middle {
-    grid-row: 5;
+    grid-row: 4;
     align-items: end;
   }
 
   .container-right-middle h2 {
     color: var(--color-header-footer);
+  }
+
+  .featured_box {
+    height: 100%;
   }
 
   .cta_large {
